global-vpc.yaml
# Created By: Rob Satnarain
# Create Date: 4/6/2026
# Version 1.5
# Updated By         Date          Notes
# Rob                4-23-2026     Initial Creation of VPC with 2 AZs, 3 Subnets each, IGW, Route Tables, Bastion Host and App Instances in two different regions. 
# Rob                4-23-2026     Added Mappings section for AMI IDs in different regions. Updated AppInstance1BSG to allow ICMP access from AppInstance1ASG instead of SSH from BastionSG.


AWSTemplateFormatVersion: '2010-09-09'
Description: "CloudFormation with VPC"

# Add a Mappings section at the top level
Mappings:
  RegionMap:
    us-east-1:
      AMI: "ami-0ea87431b78a82070" # Amazon Linux 2023 AMI for us-east-1
    us-west-1:
      AMI: "ami-02671e999eec7752f" # Amazon Linux 2023 AMI for us-west-1

Resources: 
#My VPC
  MyVPC: 
    Type: 'AWS::EC2::VPC'
    Properties: 
      CidrBlock: '172.16.0.0/16'
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: MyVPC 

#Public Subnet is AZ 1  
  PublicSubnet1A:
    Type: 'AWS::EC2::Subnet'
    Properties: 
      VpcId: !Ref MyVPC
      CidrBlock: '172.16.1.0/24'
      AvailabilityZone: !Select [0, !GetAZs '']
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: PublicSubnet1A

 #App Private Subnet in AZ 1 
  AppPrivateSubnet1A:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: '172.16.2.0/24'
      AvailabilityZone: !Select [0, !GetAZs '']
      Tags:
        - Key: Name
          Value: AppPrivateSubnet1A
  
# Data Private Subnet in AZ 1 
  DataPrivateSubnet1A:
    Type: 'AWS::EC2::Subnet'
    Properties: 
      VpcId: !Ref MyVPC
      CidrBlock: '172.16.3.0/24'
      AvailabilityZone: !Select [0, !GetAZs '']
      Tags:
        - Key: Name
          Value: DataPrivateSubnet1A

# Public Subnet in AZ 2             
  PublicSubnet1B:
    Type: 'AWS::EC2::Subnet'
    Properties: 
      VpcId: !Ref MyVPC
      CidrBlock: '172.16.4.0/24'
      AvailabilityZone: !Select [1, !GetAZs '']
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: PublicSubnet1B
  
# App Private Subnet in AZ 2  
  AppPrivateSubnet1B:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: '172.16.5.0/24'
      AvailabilityZone: !Select [1, !GetAZs '']
      Tags:
        - Key: Name
          Value: AppPrivateSubnet1B

# Data Private Subnet in AZ 2  
  DataPrivateSubnet1B:
    Type: 'AWS::EC2::Subnet'
    Properties: 
      VpcId: !Ref MyVPC
      CidrBlock: '172.16.6.0/24'
      AvailabilityZone: !Select [1, !GetAZs '']
      Tags:
        - Key: Name
          Value: DataPrivateSubnet1B

  # Create Internet Gateway
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: MyVPC-IGW

  # Attach the Internet Gateway to MyVPC
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref MyVPC
      InternetGatewayId: !Ref InternetGateway

  # Public Route Tables
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MyVPC
      Tags:
        - Key: Name
          Value: PublicRouteTable

  # Public Routes
  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  # Public Subnet 1A Route Table Association
  PublicSubnet1ARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      SubnetId: !Ref PublicSubnet1A
      RouteTableId: !Ref PublicRouteTable

  # Public Subnet 1B Route Table Association
  PublicSubnet1BRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      SubnetId: !Ref PublicSubnet1B
      RouteTableId: !Ref PublicRouteTable

  # Bastion Host EC2
  BastionHost:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType: t3.micro
      KeyName: RobBastion
      ImageId: ami-0ea87431b78a82070
      SubnetId: !Ref PublicSubnet1A
      SecurityGroupIds:
         - !Ref BastionSG
      Tags:
        - Key: Name
          Value: BastionHost

  # Bastion Security Group
  BastionSG:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'Enable SSH access'
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 65.35.126.205/32

  # AppInstance1A
  AppInstance1A:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType: t3.micro
      KeyName: RobBastion
      ImageId: !FindInMap [RegionMap, !Ref 'AWS::Region', AMI]
      SubnetId: !Ref AppPrivateSubnet1A
      SecurityGroupIds:
        - !Ref AppInstance1ASG
      Tags:
        - Key: Name
          Value: App1A

  # AppInstance1B
  AppInstance1B:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType: t3.micro
      KeyName: RobBastion
      ImageId: !FindInMap [RegionMap, !Ref 'AWS::Region', AMI]
      SubnetId: !Ref AppPrivateSubnet1B
      SecurityGroupIds:
        - !Ref AppInstance1BSG
      Tags:
        - Key: Name
          Value: App1B
  
  # AppInstance1ASG
  AppInstance1ASG:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'App Instance 1A Security Group - SSH from Bastion Only'
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId: !Ref BastionSG
  
  # AppInstance1BSG
  AppInstance1BSG:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'App Instance 1B Security Group - ICMP Access only from AppInstance1ASG'
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          SourceSecurityGroupId: !Ref AppInstance1ASG

# Store the VPC ID in SSM Parameter Store for use in other stacks
  VpcIdParameter:
    Type: 'AWS::SSM::Parameter'
    Properties:
      Name: /network/primary-vpc-id
      Type: String
      Value: !Ref MyVPC
